--- a/style/sunburst.less
+++ b/style/sunburst.less
@@ -41,6 +41,15 @@
     &--selected {
         opacity: 1;
     }
+
+    &--hidden {
+        fill: none;
+        fill-rule: unset;
+    }
+}
+
+.sunburst__slice-label {
+    text-anchor: middle;
 }
 
 .sunburst__label {
