--- a/style/sunburst.less
+++ b/style/sunburst.less
@@ -25,6 +25,9 @@
  */
 .sunburst {
     transition-property: font-size;
+    width: 100%;
+    height: 100%;
+    position: absolute;
     transition-duration: 0.2s;
     &--interactive path {
         opacity: 0.2;
@@ -34,9 +37,19 @@
 .sunburst .sunburst__slice {
     stroke: #fff;
     fill-rule: evenodd;
+
     &--selected {
         opacity: 1;
     }
+
+    &--hidden {
+        fill: none;
+        fill-rule: nonzero;
+    }
+}
+
+.sunburst__slice-label {
+    text-anchor: middle;
 }
 
 .sunburst__label {
@@ -49,11 +62,4 @@
     }
 }
 
-.sunburst__category-label {
-    font-size: 1em;
-}
-
-.sunburst__percentage-label {
-    font-size: 2em;
-}
 
