--- a/style/sunburst.less
+++ b/style/sunburst.less
@@ -29,6 +29,7 @@
     height: 100%;
     position: absolute;
     transition-duration: 0.2s;
+
     &--interactive path {
         opacity: 0.2;
     }
@@ -36,6 +37,7 @@
 
 .sunburst .sunburst__slice {
     stroke: #fff;
+    fill: transparent;
     fill-rule: evenodd;
 
     &--selected {
@@ -57,6 +59,7 @@
     transition-property: opacity;
     transition-duration: 0.2s;
     text-anchor: middle;
+
     &--visible {
         opacity: 1;
     }
