--- a/style/sunburst.less
+++ b/style/sunburst.less
@@ -25,6 +25,15 @@
     }
 }
 
+&:focus {
+    outline: none;
+}
+
+&:focus-visible {
+    outline: auto 1px;
+    outline-color: -webkit-focus-ring-color;
+}
+
 .sunburst__slice-label {
     text-anchor: middle;
     pointer-events: none;
